Bug 1403660 - Do not use 'else' after 'break' in /memory/build/rb.h. r=njn